
- Overriding the OFSwitch13Helper::InstallSwitch method. When the first
  parameter is a node container, the method returns an OpenFlow device
  container. When the first parameter is a node pointer, the method returns the
  OpenFlow device pointer. For the latter, there's the optional second
  parameter of a device container that will be configured as switch ports.

- New OFSwitch13Device::GetDpId method as an alias for the GetDatapathId
  method.

- New OFSwitch13Device::GetDatapathStruct and OFSwitch13Port::GetPortStruct
  methods returning a pointer to the ofsoftswitch13 library structures.

- Renaming OFSwitch13Device::GetOFSwitch13Port method to GetSwitchPort.

- Renaming OFSwitch13Device attributes and trace sources to better reflect what
  they really represent: PipelineCapacity attribute was renamed to CpuCapacity,
  PipelineLoad traced value was renamed to CpuLoad, and LoadDrop trace source
  was renamed to OverloadDrop. The methods GetPipelineLoad and
  GetPipelineCapacity were also renamed to GetCpuLoad and GetCpuCapacity. These
  changes also reflects on the OFSwitch13StatsCalculator: GetEwmaPipelineLoad
  and GetAvgPipelineUsage were renamed to GetEwmaCpuLoad and GetAvgCpuUsage.

- Updating OFSwitch13Device::Get* methods for improved datapath stats. The
  GetFlowEntries, GetGroupEntries, and GetMeterEntries methods were replaced by
  GetFlowTableEntries, GetGroupTableEntries, and GetMeterTableEntries. The
  following new methods were included: GetDatapathTimeout, GetFlowTableUsage,
  GetGroupTableUsage, GetMeterTableUsage, GetNControllers, GetBufferEntries,
  GetBufferSize. The BufferUsage traced value was removed, but the method with
  the same can be used to get this value on demand.

- Improving OFSwitch13StatsCalculator with more statistics. It can now dump
  individual flow table stats. This is an optional feature (disabled by
  default), that can be enabled by the FlowTableDetails attribute.
